<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- ListView Drawer -->
    <string name="title_section1">Tela Inicial</string>
    <string name="title_section2">Gerar Palpite</string>
    <string name="title_section3">Mega Sena</string>
    <string name="Row_Quina">Quina</string>
    <string name="Row_Loto_Facil">Loto Fácil</string>
    <string name="Row_Dupla_Sena">Dupla Sena</string>
    <string name="Row_Time_Mania">Time Mania</string>
    <string name="Row_Proximos_Sorteios">Próximos Sorteios</string>
    <string name="Row_sobre">Sobre</string>

    <string name="hint_aposta">Palpite</string>
    <string name="info_caixa">*Valores fornecidos pela Caixa Econômica Federal</string>
    <string name="site_mega_sena"><a href="http://loterias.caixa.gov.br/wps/portal/loterias/landing/megasena/!ut/p/a1/04_Sj9CPykssy0xPLMnMz0vMAfGjzOLNDH0MPAzcDbwMPI0sDBxNXAOMwrzCjA0sjIEKIoEKnN0dPUzMfQwMDEwsjAw8XZw8XMwtfQ0MPM2I02-AAzgaENIfrh-FqsQ9wNnUwNHfxcnSwBgIDUyhCvA5EawAjxsKckMjDDI9FQE-F4ca/dl5/d5/L2dBISEvZ0FBIS9nQSEh/#resultados">Acessar site Mega-Sena</a></string>
    <string name="app_name">Loteria Móvel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="gerar_aposta">Gerar Palpite</string>
    <string name="ver_resultados">Ver Resultados</string>
    <string name="sena">Sena</string>
    <string name="quina">Quina</string>
    <string name="quadra">Quadra</string>
    <string name="terno">Terno</string>
    <string name="buscarResultado">Buscar Resultado</string>
    <string name="resultadoSena">Ver Resultado</string>
    <string name="inputQuantidadeNumeros">Tamanho da aposta desejada</string>
    <string name="concurso_data">Concurso - Data</string>
    <string name="resultado">Resultado</string>
    <string name="ganhadores_sena">Ganhadores Sena</string>
    <string name="ganhadores_quina">Ganhadores Quina</string>
    <string name="ganhadores_quadra">Ganhadores Quadra</string>
    <string name="ganhadores_terno">Ganhadores Terno</string>
    <string name="valor_sena">R$ Sena</string>
    <string name="valor_quina">R$ Quina</string>
    <string name="valor_quadra">R$ Quadra</string>
    <string name="valor_terno">R$ Terno</string>

    <!-- Loto Facil -->
    <string name="acertos15">15 Acertos</string>
    <string name="acertos14">14 Ac..</string>
    <string name="acertos13">13 Ac..</string>
    <string name="acertos12">12 Ac..</string>
    <string name="acertos11">11 Ac..</string>
    <string name="R$">R$</string>
    <string name="ganhadores">Ganhadores</string>
    
    <!-- Dupla Sena -->
    <string name="premiacao1">PREMIAÇÃO 1º SORTEIO</string>
    <string name="premiacao2">PREMIAÇÃO 2º SORTEIO</string>
    
    <!-- Time Mania -->
    <string name="acertos7">7 Acertos</string>
    <string name="acertos6">6 Acertos</string>
    <string name="acertos5">5 Acertos</string>
    <string name="acertos4">4 Acertos</string>
    <string name="acertos3">3 Acertos</string>
    <string name="time_do_coracao">TIME DO CORAÇÃO</string>
    <string name="time_do_coracao2">T. Coração</string>
    <string name="vazio">#</string>
    <string name="atualizar">Atualizar</string>
    
    <string name="title_activity_splash">Loteria</string>
    <string name="hello_world">Hello world!</string>

    <color name="clouds">#ecf0f1</color>
    
    <string name="megasenaTitle">MEGA-SENA</string>
    <string name="duplasenaTitle">DUPLA SENA</string>
    <string name="lotofacilTitle">LOTOFÁCIL</string>
    <string name="quinaTitle">QUINA</string>
    <string name="timemaniaTitle">TIMEMANIA</string>
    
    <!-- proximos sorteios -->
    <string name="proximos_sorteios">Próximos Sorteios</string>
    
    <string name="data">Data</string>
    <string name="concurso">Concurso</string>
    <string name="sobre">Sobre</string>
    <string name="error">Tentar Novamente</string>
    <string name="andetonha">AndeTonha</string>
    <string name="versao">Versão 1.0</string>
    <string name="nome_app">Loteria Movel</string>
    
    <string name="resultado_megasena">Resultado Mega-Sena</string>
    <string name="resultado_quina">Resultado Quina</string>
    <string name="resultado_timemania">Resultado TimeMania</string>
    <string name="resultado_lotofacil">Resultado Loto Fácil</string>
    <string name="resultado_duplasena">Resultado Dupla-Sena</string>
    <string name="problemaInternt">Existe uma problema com sua conexão de internet.\n Toque na imagem para tentar novamente.</string>
    <string name="click_para_gerar_palpite">Toque no icone para gerar palpite.</string>
    
    
</resources>
