<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="440dp" >
        
         <TextView
        android:id="@+id/numero_concurso_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/concurso_data"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/resultado_concurso_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numero_concurso_duplasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/resultado"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/sena1_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/resultado_concurso_duplasena"
        android:layout_marginTop="44dp"
        android:text="@string/sena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/rateio_sena_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ganhadores_sena_duplasena"
        android:layout_alignParentRight="true"
        android:text="@string/valor_sena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/quina1_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sena1_duplasena"
        android:layout_below="@+id/sena1_duplasena"
        android:layout_marginTop="16dp"
        android:text="@string/quina"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/rateio_quina_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ganhadores_quina_duplasena"
        android:layout_alignBottom="@+id/ganhadores_quina_duplasena"
        android:layout_alignRight="@+id/rateio_sena_duplasena"
        android:text="@string/valor_quina"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/quadra1_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quina1_duplasena"
        android:layout_marginTop="14dp"
        android:text="@string/quadra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/rateio_quadra_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ganhadores_quadra_duplasena"
        android:layout_alignRight="@+id/rateio_quina_duplasena"
        android:text="@string/valor_quadra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_alignLeft="@+id/quadra1_duplasena"
        android:layout_below="@+id/quadra1_duplasena"
        android:layout_marginTop="10dp"
        android:background="#a51226" />

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_above="@+id/ganhadores_sena_duplasena"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:background="#a51226" />

    <!-- <TextView
        android:id="@+id/acumulado_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view2"
        android:layout_centerHorizontal="true"
        android:textColor="#230083"
        android:textAppearance="?android:attr/textAppearanceSmall" /> -->

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_above="@+id/view2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:background="#a51226" />

    <Button
        android:id="@+id/VerResultadoDuplaSena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#a51226"
        android:height="40dp"
        android:onClick="getResultados"
        android:shadowColor="#000000"
        android:text="@string/buscarResultado"
        android:textColor="#ffffff"
        android:width="150dp"
        android:layout_marginBottom="100dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:layout_marginTop="16dp"
        android:background="#a51226" />

    <TextView
        android:id="@+id/premiacao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view3"
        android:layout_centerHorizontal="true"
        android:text="@string/premiacao1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/premiacao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view4"
        android:layout_alignLeft="@+id/premiacao1"
        android:text="@string/premiacao2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/sena2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view4"
        android:layout_marginTop="11dp"
        android:text="@string/sena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/quina2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sena2_duplasena"
        android:layout_marginTop="16dp"
        android:text="@string/quina"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/quadra2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quina2_duplasena"
        android:layout_marginTop="16dp"
        android:text="@string/quadra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/rateio_sena2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ganhadores_sena2_duplasena"
        android:layout_alignBottom="@+id/ganhadores_sena2_duplasena"
        android:layout_alignParentRight="true"
        android:text="@string/valor_sena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/rateio_quina2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ganhadores_quina2_duplasena"
        android:layout_alignParentRight="true"
        android:text="@string/valor_quina"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/rateio_quadra2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ganhadores_quadra2_duplasena"
        android:layout_alignParentRight="true"
        android:text="@string/valor_quadra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <View
        android:id="@+id/view5"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quadra2_duplasena"
        android:layout_marginTop="10dp"
        android:background="#a51226" />

    <TextView
        android:id="@+id/ganhadores_sena_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sena1_duplasena"
        android:layout_alignBottom="@+id/sena1_duplasena"
        android:layout_centerHorizontal="true"
        android:text="@string/ganhadores_sena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/ganhadores_quina_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quadra1_duplasena"
        android:layout_centerHorizontal="true"
        android:text="@string/ganhadores_quina"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/ganhadores_quadra_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view1"
        android:layout_centerHorizontal="true"
        android:text="@string/ganhadores_quadra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/ganhadores_sena2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sena2_duplasena"
        android:layout_alignBottom="@+id/sena2_duplasena"
        android:layout_alignLeft="@+id/ganhadores_sena_duplasena"
        android:text="@string/ganhadores_sena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/ganhadores_quadra2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view5"
        android:layout_alignLeft="@+id/ganhadores_quadra_duplasena"
        android:text="@string/ganhadores_quadra"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/ganhadores_quina2_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quadra2_duplasena"
        android:layout_alignLeft="@+id/ganhadores_quina_duplasena"
        android:text="@string/ganhadores_quina"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />

    <TextView
        android:id="@+id/acumulado_duplasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view5"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a51226" />
        
    </RelativeLayout>

</ScrollView>